[tool.poetry]
name = "santehnika-online"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "santehnika_online"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.12.0"
bs4 = "^0.0.1"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
